[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autonav"
version = "0.0.1"
description = "Research software for estimating the trajectory of a UAV in indoor environments"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["UAV", "Navigation", "Indoor"]
license = { text = "MIT" }
authors = [{ name = "Ricardo S. Santos", email = "f6221@ulusofona.pt" }]
dependencies = ["numpy >= 1.26.2", "matplotlib >= 3.8.2", "scipy >= 1.11.3"]

[project.scripts]
autonav = "autonav.cli:_main"